syntax = "proto3";

///////////////////////////////////////////////////////////////////////////////
// Message IDs
///////////////////////////////////////////////////////////////////////////////

// GlobalData
enum GlobalProtoID
{
    // ranklist
    REQ_PLAYER_RANKLIST             = 100001;
    RSP_PLAYER_RANKLIST             = 100002;
    REQ_UPDATE_PLAYER_MAX_SCORE     = 100003;
    REQ_GET_PLAYER_MAX_SCORE        = 100004;
    RSP_GET_PLAYER_MAX_SCORE        = 100005;
    REQ_GET_RESURRECTION_COIN_NUM   = 100006;
    RSP_GET_RESURRECTION_COIN_NUM   = 100007;
    REQ_ACCEPTED_INVITATION         = 100008;
    RSP_ACCEPTED_INVITATION         = 100009;
    REQ_SHARE_LINK                  = 100010;
    RSP_SHARE_LINK                  = 100011;
    INFO_LOGIN_REWARD               = 100012;
    REQ_COST_RESURRECTION_COIN      = 100013;
    RSP_COST_RESURRECTION_COIN      = 100014;
    REQ_GET_GOLD_COIN_NUM           = 100015;
    RSP_GET_GOLD_COIN_NUM           = 100016;
    REQ_COST_GOLD_COIN              = 100017;
    RSP_COST_GOLD_COIN              = 100018;
    REQ_ADD_GOLD_COIN               = 100019;
    RSP_ADD_GOLD_COIN               = 100020;
    REQ_GET_BALL_LIST               = 100021;
    RSP_GET_BALL_LIST               = 100022;
    REQ_GET_CURRENT_BALL_ID         = 100023;
    RSP_GET_CURRENT_BALL_ID         = 100024;
    REQ_BUY_BALL_ID                 = 100025;
    RSP_BUY_BALL_ID                 = 100026;
    REQ_CHOOSE_BALL_ID              = 100027;
    RSP_CHOOSE_BALL_ID              = 100028;
    REQ_SHARE_COIN_AND_BALL         = 100029;
    RSP_SHARE_COIN_AND_BALL         = 100030;
}

// GameData
enum GameProtoID
{

    XXX = 1;
}

///////////////////////////////////////////////////////////////////////////////
// GlobalData Message Structures
///////////////////////////////////////////////////////////////////////////////




///////////////////////////////////////////////////////////////////////////////
// GameData Message Structures
///////////////////////////////////////////////////////////////////////////////